<?xml version="1.0"?>
<package format="2">
  <name>ros_observer_pkg</name>
  <version>1.0.0</version>
  <description>The observer package</description>

  <maintainer email="alexander.koenig9233@gmail.com">Alexander Koenig</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
